<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_user"
        android:layout_width="79dp"
        android:layout_height="79dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/image_user"
        app:layout_constraintTop_toBottomOf="@+id/image_user"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/image_user"
        app:layout_constraintTop_toBottomOf="@+id/image_user"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/title_following"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="96dp"
        android:text="@string/Following"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/image_user"
        app:layout_constraintTop_toBottomOf="@+id/image_user" />

    <TextView
        android:id="@+id/detail_following"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/title_followers"
        app:layout_constraintStart_toStartOf="@+id/title_following"
        app:layout_constraintTop_toBottomOf="@+id/title_following"
        tools:text="0" />

    <TextView
        android:id="@+id/title_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="96dp"
        android:text="@string/Followers"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/image_user"
        app:layout_constraintTop_toBottomOf="@+id/image_user" />

    <TextView
        android:id="@+id/followers_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/title_followers"
        app:layout_constraintStart_toStartOf="@+id/title_followers"
        app:layout_constraintTop_toBottomOf="@+id/title_followers"
        tools:text="0" />

    <TextView
        android:id="@+id/title_repository"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="96dp"
        android:text="@string/Repository"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/image_user"
        app:layout_constraintTop_toBottomOf="@+id/image_user" />

    <TextView
        android:id="@+id/detail_repository"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="280dp"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/title_repository"
        app:layout_constraintStart_toStartOf="@+id/title_repository"
        app:layout_constraintTop_toBottomOf="@+id/title_repository"
        tools:text="0" />

    <ImageView
        android:id="@+id/icon_company"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_home_work_24"
        app:layout_constraintEnd_toEndOf="@+id/detail_following"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="@+id/detail_following"
        app:layout_constraintTop_toBottomOf="@+id/detail_following" />

    <TextView
        android:id="@+id/company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/icon_company"
        app:layout_constraintStart_toEndOf="@+id/icon_company"
        tools:text="Company" />

    <ImageView
        android:id="@+id/icon_location"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_place_24"
        app:layout_constraintEnd_toEndOf="@+id/icon_company"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="@+id/icon_company"
        app:layout_constraintTop_toBottomOf="@+id/icon_company" />

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/icon_location"
        app:layout_constraintStart_toEndOf="@+id/icon_location"
        tools:text="Location" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:tabRippleColor="@null"
        app:tabTextColor="@color/black" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tabs"
        app:layout_constraintStart_toStartOf="@+id/tabs"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

</androidx.constraintlayout.widget.ConstraintLayout>
